--- a/IntegracaoFormularioMVC/Views/Shared/_Layout.cshtml
+++ b/IntegracaoFormularioMVC/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Livros" asp-action="Index">Livros</a>
+                        </li>
                     </ul>
                 </div>
             </div>
