--- a/IntegracaoFormularioMVC/Views/Livros/Index.cshtml
+++ b/IntegracaoFormularioMVC/Views/Livros/Index.cshtml
@@ -1,8 +1,12 @@
 ﻿@model IEnumerable<LivrosModel>
 
+<div class="container">
+    <div class="d-flex justify-content-between align-items-center mb-5">
+        <h1>Livros</h1>
+        <a class="btn btn-success mx-2">Cadastrar novo livro</a>
+    </div>
 
-
-<table class="table table-hover">
+<table class="table table-hover"> 
   <thead>
     <tr>
       <th scope="col">Título</th>
@@ -30,3 +34,5 @@
 
   </tbody>
 </table>
+
+</div>
