--- a/IntegracaoFormularioMVC/Views/Livros/Cadastrar.cshtml
+++ b/IntegracaoFormularioMVC/Views/Livros/Cadastrar.cshtml
@@ -2,4 +2,45 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    ViewData["title"] = "Cadastrar Empréstimo";
 }
+
+<div class="container p-5 rounded-5">
+
+    <div>
+        <h1>Cadastro de Livros</h1>
+    </div>
+
+<form>
+    <div class="mb-3">
+            <label for="Título" class="form-label">Título</label>
+            <input type="text" class="form-control" id="Título" placeholder="Digite o título do livro">
+    </div>
+
+
+    <div class="mb-3">
+        <label for="Autor" class="form-label">Autor</label>
+        <input type="text" class="form-control" id="Autor" placeholder="Digite o nome do autor">
+    </div>
+
+
+    <div class="mb-3">
+        <label for="Páginas" class="form-label">Páginas</label>
+        <input type="text" class="form-control" id="Autor" placeholder="Digite o número de páginas do livro">
+    </div>
+
+
+    <div class="mb-3">
+        <label for="CapaDura" class="form-label">Capa Dura</label>
+        <input type="text" class="form-control" id="CapaDura" placeholder="O livro possui capa dura?">
+    </div>
+
+    <div class="d-flex gap-5 mt-5">
+         <button type="submit" class="btn btn-success">Adicionar</button>
+         <a class="btn btn-primary w-50">Voltar</a>
+    </div>
+     
+
+</form>
+
+</div>
