Adicionado navegação entre páginas Index-Formulário

--- a/IntegracaoFormularioMVC/Views/Livros/Index.cshtml
+++ b/IntegracaoFormularioMVC/Views/Livros/Index.cshtml
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="d-flex justify-content-between align-items-center mb-5">
         <h1>Livros</h1>
-        <a class="btn btn-success mx-2">Cadastrar novo livro</a>
+        <a class="btn btn-success mx-2" asp-controller="Livros" asp-action="Cadastrar">Cadastrar novo livro</a>
     </div>
 
 <table class="table table-hover"> 
