--- a/IntegracaoFormularioMVC/Views/Livros/Cadastrar.cshtml
+++ b/IntegracaoFormularioMVC/Views/Livros/Cadastrar.cshtml
@@ -36,8 +36,8 @@
     </div>
 
     <div class="d-flex gap-5 mt-5">
-         <button type="submit" class="btn btn-success">Adicionar</button>
-         <a class="btn btn-primary w-50">Voltar</a>
+            <button type="submit" class="btn btn-success w-50">Adicionar</button>
+         <a class="btn btn-primary w-50" asp-controller="Livros" asp-action="Index">Voltar</a>
     </div>
      
 
