--- a/IntegracaoFormularioMVC/Views/Livros/Cadastrar.cshtml
+++ b/IntegracaoFormularioMVC/Views/Livros/Cadastrar.cshtml
@@ -1,6 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model LivrosModel
 @{
     ViewData["title"] = "Cadastrar Empréstimo";
 }
@@ -11,28 +9,30 @@
         <h1>Cadastro de Livros</h1>
     </div>
 
-<form>
+<form method="post" asp-controller="Livros" asp-action="Cadastrar">
+    
+
     <div class="mb-3">
             <label for="Título" class="form-label">Título</label>
-            <input type="text" class="form-control" id="Título" placeholder="Digite o título do livro">
+            <input type="text" class="form-control" asp-for="Titulo" id="Título" placeholder="Digite o título do livro">
     </div>
 
 
     <div class="mb-3">
         <label for="Autor" class="form-label">Autor</label>
-        <input type="text" class="form-control" id="Autor" placeholder="Digite o nome do autor">
+            <input type="text" class="form-control" asp-for="Autor" id="Autor" placeholder="Digite o nome do autor">
     </div>
 
 
     <div class="mb-3">
         <label for="Páginas" class="form-label">Páginas</label>
-        <input type="text" class="form-control" id="Autor" placeholder="Digite o número de páginas do livro">
+            <input type="text" class="form-control" asp-for="Paginas" id="Autor" placeholder="Digite o número de páginas do livro">
     </div>
 
 
     <div class="mb-3">
         <label for="CapaDura" class="form-label">Capa Dura</label>
-        <input type="text" class="form-control" id="CapaDura" placeholder="O livro possui capa dura?">
+            <input type="text" class="form-control" asp-for="CapaDura"  id="CapaDura" placeholder="O livro possui capa dura?">
     </div>
 
     <div class="d-flex gap-5 mt-5">
