Criado validação do formulario de cadastro e complemento da tabela Livros

--- a/IntegracaoFormularioMVC/Views/Livros/Index.cshtml
+++ b/IntegracaoFormularioMVC/Views/Livros/Index.cshtml
@@ -14,6 +14,7 @@
       <th scope="col">Páginas</th>
       <th scope="col">Capa Dura</th>
       <th scope="col">Data Compra</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -28,6 +29,10 @@
                     <td>@livro.Paginas</td>
                     <td>@livro.CapaDura</td>
                     <td>@livro.DataCompra</td>
+                    <td>
+                        <a asp-controller="Livros" asp-action="Editar" class="btn btn-warning mx-2">Editar</a>
+                        <a asp-controller="Livros" asp-action="Excluir" class="btn btn-danger mx-2">Excluir</a>
+                    </td>
                 </tr>
             }
         }
