--- a/IntegracaoFormularioMVC/Views/Livros/Cadastrar.cshtml
+++ b/IntegracaoFormularioMVC/Views/Livros/Cadastrar.cshtml
@@ -13,26 +13,30 @@
     
 
     <div class="mb-3">
-            <label for="Título" class="form-label">Título</label>
-            <input type="text" class="form-control" asp-for="Titulo" id="Título" placeholder="Digite o título do livro">
+        <label for="Título" class="form-label">Título</label>
+        <input type="text" class="form-control" asp-for="Titulo" id="Título" placeholder="Digite o título do livro">
+        <span asp-validation-for="Titulo"></span>
     </div>
 
 
     <div class="mb-3">
         <label for="Autor" class="form-label">Autor</label>
-            <input type="text" class="form-control" asp-for="Autor" id="Autor" placeholder="Digite o nome do autor">
+        <input type="text" class="form-control" asp-for="Autor" id="Autor" placeholder="Digite o nome do autor">
+        <span asp-validation-for="Autor"></span>
     </div>
 
 
     <div class="mb-3">
         <label for="Páginas" class="form-label">Páginas</label>
-            <input type="text" class="form-control" asp-for="Paginas" id="Autor" placeholder="Digite o número de páginas do livro">
+        <input type="text" class="form-control" asp-for="Paginas" id="Autor" placeholder="Digite o número de páginas do livro">
+        <span asp-validation-for="Paginas"></span>
     </div>
 
 
     <div class="mb-3">
         <label for="CapaDura" class="form-label">Capa Dura</label>
-            <input type="text" class="form-control" asp-for="CapaDura"  id="CapaDura" placeholder="O livro possui capa dura?">
+        <input type="text" class="form-control" asp-for="CapaDura"  id="CapaDura" placeholder="O livro possui capa dura?">
+        <span asp-validation-for="CapaDura"></span>
     </div>
 
     <div class="d-flex gap-5 mt-5">
