Criado método HttpGet Editar

--- a/IntegracaoFormularioMVC/Views/Livros/Cadastrar.cshtml
+++ b/IntegracaoFormularioMVC/Views/Livros/Cadastrar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model LivrosModel
 @{
-    ViewData["title"] = "Cadastrar Empréstimo";
+    ViewData["title"] = "Cadastrar Livro";
 }
 
 <div class="container p-5 rounded-5">
