--- a/IntegracaoFormularioMVC/Views/Livros/Excluir.cshtml
+++ b/IntegracaoFormularioMVC/Views/Livros/Excluir.cshtml
@@ -42,7 +42,7 @@
         </div>
 
         <div class="d-flex gap-5 mt-5">
-            <button type="submit" class="btn btn-success w-50">Excluir</button>
+            <button type="submit" class="btn btn-danger w-50">Excluir</button>
             <a class="btn btn-primary w-50" asp-controller="Livros" asp-action="Index">Voltar</a>
         </div>
 
