--- a/IntegracaoFormularioMVC/Views/Livros/Index.cshtml
+++ b/IntegracaoFormularioMVC/Views/Livros/Index.cshtml
@@ -6,7 +6,7 @@
         <a class="btn btn-success mx-2" asp-controller="Livros" asp-action="Cadastrar">Cadastrar novo livro</a>
     </div>
 
-<table class="table table-hover"> 
+<table id="Livros" class="table table-hover"> 
   <thead>
     <tr>
       <th scope="col">Título</th>
