--- a/IntegracaoFormularioMVC/Views/Livros/Index.cshtml
+++ b/IntegracaoFormularioMVC/Views/Livros/Index.cshtml
@@ -6,6 +6,21 @@
         <a class="btn btn-success mx-2" asp-controller="Livros" asp-action="Cadastrar">Cadastrar novo livro</a>
     </div>
 
+    @if(TempData["MensagemSucesso"] != null)
+    {
+        <div class="alert alert-sucess" role="alert">
+            @TempData["MensagemSucesso"]
+        </div>
+    }
+
+    @if(TempData["MensagemErro"] != null)
+    {
+        <div class="alert alert-danger" role="alert">
+            @TempData["MensagemErro"]
+        </div>
+    }
+
+
 <table id="Livros" class="table table-hover"> 
   <thead>
     <tr>
