Alterado tema base pulse.css

--- a/IntegracaoFormularioMVC/Views/Shared/_Layout.cshtml
+++ b/IntegracaoFormularioMVC/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - IntegracaoFormularioMVC</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/Pulse.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/IntegracaoFormularioMVC.styles.css" asp-append-version="true" />
     <link href="https://cdn.datatables.net/v/dt/dt-1.13.8/datatables.min.css" rel="stylesheet">
 </head>
