--- a/IntegracaoFormularioMVC/Views/Shared/_Layout.cshtml
+++ b/IntegracaoFormularioMVC/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/Pulse.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/IntegracaoFormularioMVC.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.datatables.net/v/dt/dt-1.13.8/datatables.min.css" rel="stylesheet">
 </head>
 <body>
